refactor: rename Carbon Design System → Standard Design System
- Renamed all references across 26 files (templates, scripts, styles, content, config)
- Archived previous STATUS.md (v0.4) to archive/
- Created new STATUS.md tracking the full refactor
- Updated CANONICAL-STRUCTURE.md
- Build verified: 38 pages, clean output
- Remaining infra: GitHub repo rename, domain, symlinks (Phase 5)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "carbon-design-system",
+  "name": "standard-design-system",
   "version": "0.3.0",
-  "description": "Framework-agnostic design system.",
+  "description": "Standard Design System — Framework-agnostic design system.",
   "type": "module",
   "scripts": {
     "build": "node scripts/build.mjs",
